# anomed_challenge

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  pyproject.toml
docs/: api.rst  conf.py  index.md  index.rst  requirements.txt
docs/apidocs/: index.rst
docs/apidocs/anomed_challenge/: anomed_challenge.challenge.rst  anomed_challenge.challenge_server.rst  anomed_challenge.rst
src/anomed_challenge/: __init__.py  challenge.py  challenge_server.py
tests/: test_challenge.py  test_challenge_server.py
