[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomed-challenge"
description = """
A library aiding to create challenges for the AnoMed competition platform."""
readme = "README.md"
authors = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
maintainers = [{ name = "Yannik Potdevin", email = "ypo.uzl@proton.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
version = "0.0.16"
dependencies = ["anomed-utils", "falcon~=4.0", "numpy~=1.26", "requests~=2.32"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = ["anomed-challenge", "ruff~=0.7"]
test = ["anomed-challenge", "coverage~=7.6", "pytest~=8.3", "pytest-mock~=3.14"]

[tool.coverage.run]
branch = true
source = ["anomed_challenge"]
